# evidence-doc-qa

./: .dockerignore  .env.example  .gitignore  README.md  agent.yml  alembic.ini  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_create_tables.py
apps/api/: Dockerfile  requirements.txt
apps/api/app/: config.py  db.py  embeddings.py  indexing.py  ingestion.py  main.py  policy.py  retrieval.py  schemas.py  telemetry.py
apps/web/: .env.example  next-env.d.ts  next.config.js  package-lock.json  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: ChatInterface.tsx  CitationCard.tsx  IngestionZone.tsx  MessageBubble.tsx
apps/web/types/: index.ts
docs/: ARCHITECTURE.md  CODEX_WORKFLOW.md  ENVIRONMENT.md  ENVIRONMENT_REFERENCE.md  EVALS_V1_REQUIREMENTS.md  OPEN_QUESTIONS.md  PRD.md  PROJECT_PLAN_CODEX.md  presentation.html
evals/: golden.jsonl  run.py
infra/: main.bicep
tasks/: 000-repo-bootstrap.task.md  001-versioning-schemas.task.md  002-ingestion-parsing.task.md  003-retrieval-hybrid.task.md  004-ask-gates-citations.task.md  005-telemetry-metrics.task.md  006-evals-gate.task.md  007-indexing-hybrid.task.md  008-azure-portal-setup.task.md  008-azure-services-setup.task.md  009-ci-eval-gate.task.md  010-ui-refinement-refusals.task.md  011-vercel-frontend-deployment.task.md  _project_status.md
